Switch to ZGC for JCentral