@@ -31,7 +31,7 @@ export PATH=$JAVA_HOME/bin:$PATH
 
 echo "Starting new JCentral process with `which java`"
 
-JALIEN_MEM="-Xms2g -Xmx16g" nohup ./run.sh \
+JALIEN_MEM="-Xms2g -Xmx16g" JALIEN_GC="-XX:+UseZGC" nohup ./run.sh \
     -XX:CompileThreshold=5 \
     -DAliEnConfig=${CONFIG_DIR} \
     -Dsun.security.ssl.allowUnsafeRenegotiation=true \
